--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
     [pagination]="true"
     [paginationPageSize]="paginationPageSize"
     [defaultColDef]="defaultColDef"
+    [columnTypes]="columnTypes"
 >
 </ag-grid-angular>
