--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,20 @@
+
+<app-user-registration [user]="selectedUser"></app-user-registration>
+
+
 <ag-grid-angular
+    #agUserGrid
     style="width: 100%; height: 500px;"
     class="ag-theme-alpine"
-    [rowData]="postData"
+    [rowData]="usersData"
     [columnDefs]="columnDefs"
     [pagination]="true"
     [paginationPageSize]="paginationPageSize"
     [defaultColDef]="defaultColDef"
+    [frameworkComponents]="frameworkComponents"
     [columnTypes]="columnTypes"
+    (gridReady)="onGridReady($event)"
 >
 </ag-grid-angular>
+
+<pre>{{usersData | json}}</pre>
